<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Biblioteca Elorrieta</string>
    <string name="NuevoUsuario">Nuevo Usuario</string>
    <string name="LibrosPrestados">Libros Prestados</string>
    <string name="NuevoPrestamo">Nuevo Prestamo</string>
    <string name="GestorBiblioteca">Gestor Biblioteca</string>
    <string name="AcercaDe">Acerca de...</string>
   <string name="PrestadoA">Prestado a</string>
    <string name="Usuarios">Usuarios</string>
    <string name="Libros">Libros</string>
    <string name="hechoPor">Creado por: Asier Callejo como aplicacion de Android</string>
    <string name="dam">2DAM 2018</string>
    <string name="Prestado">Prestado</string>
    <string name="AnadirUsuario">Añadir Usuario</string>
    <string name="ID">ID</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellido">Apellido</string>
    <string name="Telefono">Telefono</string>
    <string name="LibroDevuelto">Libro devuelto</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Anadir">Añadir</string>
    <string name="Buscar">Buscar</string>
    <string name="Borrar">Borrar</string>
    <string name="No">No</string>
    <string name="LibroPrestado">Libro prestado</string>
    <string name="NuevoLibro">Nuevo Libro</string>
    <string name="ISBN">ISBN</string>
    <string name="Titulo">Titulo</string>
    <string name="Autor">Autor</string>
    <string name="Editorial">Editorial</string>
    <string name="ErrorCampo">Error, revise los datos</string>
    <string name="ISBNExistente">ISBN existente</string>
    <string name="GuardadoCorrectametne">Guardado correctamente</string>
    <string name="ISBNInexistente">No existe ningun libro con ese ISBN</string>
    <string name="ISBNVacio">ISBN vacio</string>
    <string name="ISBNBorrado">Libro borrado</string>
    <string name="Siguiente">Siguiente</string>
    <string name="SeleccionarUsuario">Seleccionar usuario</string>
    <string name="SeleccionarLibro">Seleccionar libro</string>
    <string name="Actualizar">Actualizar</string>
	<string name="DatosModificados">Datos modificados</string>
    <string name="SeleccionarPrestamo">Seleccionar prestamo</string>
    <string name="Devuelto">Devuelto</string>
    <string name="LLamar">LLamar</string>
    <string name="IDExistente">ID Existente</string>
    <string name="IDInexistemte">No existe nadie con ese ID</string>
    <string name="IDBorrado">Usuario borrado</string>
    <string name="ElLibro">El libro </string>
    <string name="HaSidoPrestado">ha sido prestado </string>
    <string name="NPrestados">C. prestados</string>
</resources>
